# SocketCan

./: .gitignore  CMakeLists.txt  README.md
CANLib/: CMakeLists.txt
CANLib/inc/: CHAL_SocketCAN.h  SocketCan.h
CANLib/src/: CHAL_SocketCAN.cpp  SocketCan.cpp
Test/: CANTest.cpp  CMakeLists.txt
